--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -44,6 +44,17 @@
 		<url-pattern>/home</url-pattern>
 	</servlet-mapping>
 
+	<servlet>
+		<servlet-name>ReservationServlet</servlet-name>
+		<servlet-class>Provisio.ReservationServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>ReservationServlet</servlet-name>
+		<url-pattern>/reservation</url-pattern>
+	</servlet-mapping>
+
+
 	<!--
 		Universal parameter name for handling user emails
 	-->
@@ -124,5 +135,37 @@
 	<context-param>
 		<param-name>UserHomeRedirectProjectContextURL</param-name>
 		<param-value>/jsp/index.jsp</param-value>
+	</context-param>
+
+	<!--
+		Redirect to reservation page - host context
+	-->
+	<context-param>
+		<param-name>UserReservationRedirectHostContextURL</param-name>
+		<param-value>/Provisio/jsp/reservation_booking.jsp</param-value>
+	</context-param>
+
+	<!--
+		Redirect to reservation page - project context
+	-->
+	<context-param>
+		<param-name>UserReservationRedirectProjectContextURL</param-name>
+		<param-value>/jsp/reservation_booking.jsp</param-value>
+	</context-param>
+
+	<!--
+		Redirect to confirmation page - host context
+	-->
+	<context-param>
+		<param-name>UserConfirmationRedirectHostContextURL</param-name>
+		<param-value>/Provisio/jsp/confirmation.jsp</param-value>
+	</context-param>
+
+	<!--
+		Redirect to confirmation page - project context
+	-->
+	<context-param>
+		<param-name>UserConfirmationRedirectProjectContextURL</param-name>
+		<param-value>/jsp/confirmation.jsp</param-value>
 	</context-param>
 </web-app>
