--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -54,6 +54,10 @@
 		<url-pattern>/reservation</url-pattern>
 	</servlet-mapping>
 
+	<welcome-file-list>
+	    <welcome-file>/jsp/index.jsp</welcome-file>
+	</welcome-file-list>
+
 
 	<!--
 		Universal parameter name for handling user emails
@@ -167,5 +171,21 @@
 	<context-param>
 		<param-name>UserConfirmationRedirectProjectContextURL</param-name>
 		<param-value>/jsp/confirmation.jsp</param-value>
+	</context-param>
+
+	<!--
+		Redirect to error-404 page - host context
+	-->
+	<context-param>
+		<param-name>UserError404RedirectHostContextURL</param-name>
+		<param-value>/Provisio/jsp/error-404.jsp</param-value>
+	</context-param>
+
+	<!--
+		Redirect to error-404 page - project context
+	-->
+	<context-param>
+		<param-name>UserError404RedirectProjectContextURL</param-name>
+		<param-value>/jsp/error-404.jsp</param-value>
 	</context-param>
 </web-app>
