--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 https://github.com/github/gitignore/blob/master/Global/Eclipse.gitignore
 https://github.com/github/gitignore/blob/master/Java.gitignore
+sources.txt
+WEB-INF/classes/*
